# python-basics

./: Makefile  README.md  pyproject.toml
.github/workflows/: test-check.yml
practice_package/: __init__.py  numbers.py
tests/: test_boolean.py  test_branching.py  test_dicts.py  test_lists.py  test_loops.py  test_numbers.py  test_sets.py  test_strings.py
